# python-sqlplus-checker

./: README.md  main.py  pyproject.toml  test_main.py
scripts/bad/: bad_absolute_path.sql  bad_ampersand_no_define_off.sql  bad_empty_line_in_plsql.sql  bad_missing_define_off.sql  bad_missing_semicolon_dml.sql  bad_missing_semicolon_select.sql  bad_missing_slash_function.sql  bad_missing_slash_multi_block.sql  bad_missing_slash_procedure.sql  bad_missing_slash_trigger.sql  bad_missing_whenever.sql  bad_no_commit.sql  bad_no_commit_merge.sql  bad_reserved_keyword_alias.sql
scripts/good/: compliant_dml.sql  compliant_multi_block.sql  compliant_package_body.sql  compliant_package_spec.sql  compliant_procedure.sql  compliant_select.sql  compliant_type_body.sql
