[project]
name = "python-sqlplus-checker"
version = "0.1.0"
description = "Static analyzer for Oracle SQLPlus compatibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
sqlplus-checker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
